spell-check strikes back

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -73,7 +73,7 @@ When a scientific method is used beyond its scope, sometimes it leads to a mathe
 %		although often mentioned as such \cite{mortensen2010unambiguous}, the ambiguity of retrieved refractive index does not 
 %		present a big issue compared to more fundamental limitations of the s-parameter method
 
-Finally, even when the scattering parameter method yields a physically sound index of refraction, it does not guarantee that the retrieved effective impedance $\Zeff$ is valid nor that the medium may described by means of the effective local permittivity $\eeff$ and permeability $\meff$. These effective parameters require the unit cell to be much smaller than the Bloch's wavelength. In most metamaterials, this condition is fulfilled in one or few narrow portions of the spectrum only, namely where $|\Neff'| \ll c/(2af)$. Otherwise the spectra of $\eeff$ or $\meff$ acquire typical antiresonance artifacts, which have incited disputes stretching over several papers (starting with Ref. \cite{koschny2003resonant}). We argumented that the Landau-Lifshitz form of permittivity $\epsLL(\omega,\KK)$ is required to fully account for the spatial dispersion. 
+Finally, even when the scattering parameter method yields a physically sound index of refraction, it does not guarantee that the retrieved effective impedance $\Zeff$ is valid nor that the medium may described by means of the effective local permittivity $\eeff$ and permeability $\meff$. These effective parameters require the unit cell to be much smaller than the Bloch's wavelength. In most metamaterials, this condition is fulfilled in one or few narrow portions of the spectrum only, namely where $|\Neff'| \ll c/(2af)$. Otherwise the spectra of $\eeff$ or $\meff$ acquire typical antiresonance artifacts, which have incited disputes stretching over several papers (starting with Ref. \cite{koschny2003resonant}). We argued that the Landau-Lifshitz form of permittivity $\epsLL(\omega,\KK)$ is required to fully account for the spatial dispersion. 
 %	- some of them have Neff<0, but the regions of applicability for eeff nor meff is much more restricted 
 %		to regions of |Neff'|~0, since as argued earlier, the local effective parameters of $\eeff$ and $\meff$ do not have enough degrees of freedom to express the (longitudinal) spatial dispersion; i.e. the effect of the fields varying significantly within one unit cell.
 
