--- a/result.tex
+++ b/result.tex
@@ -61,7 +61,7 @@ The width of the band gap grows with the amplitude of the wave scattered from th
 The vicinity of a Fabry-Pérot resonance influences the position and width the neighbouring band gap, which can be found for different values of dielectric permittivity of the slab $\epsrl\in\{4,12,20\}$ in Fig. \ref{fg_Slab_fillfraction015_epsilon_comparison}.
 
 \label{diracpoint}
-As a special case, the conditions for both Bragg and Fabry-Pérot resonances can be fulfilled simultaneously: a \textit{zero-width band gap}\index{zero-width band gap} results and two photonic bands are adjacent to each other in the same way as they were in vacuum (c. f. Fig. \ref{fg_1dbd}a). In all cases of zero-width PBGs, the dispersion curves appear to approach the boundary of photonic bands (located in a high-symmetry point in the Brillouin zone) as lines with nonzero slope. In analogy with the dispersion of electrons in a solid, this can be viewed as a \textit{Dirac point for photons-polaritons}\index{Dirac point for photons-polaritons}, where the photons-polaritons have zero effective mass. The corresponding isofrequency contour may have a cusp in this point, invalidating even the generalised notion of the refractive index as elaborated in Section \ref{indexofrefraction}.
+As a special case, the conditions for both Bragg and Fabry-Pérot resonances can be fulfilled simultaneously: a \textit{zero-width band gap}\index{zero-width band gap} results and two photonic bands are adjacent to each other in the same way as they were in vacuum (cf. Fig. \ref{fg_1dbd}a). In all cases of zero-width PBGs, the dispersion curves appear to approach the boundary of photonic bands (located in a high-symmetry point in the Brillouin zone) as lines with nonzero slope. In analogy with the dispersion of electrons in a solid, this can be viewed as a \textit{Dirac point for photons-polaritons}\index{Dirac point for photons-polaritons}, where the photons-polaritons have zero effective mass. The corresponding isofrequency contour may have a cusp in this point, invalidating even the generalised notion of the refractive index as elaborated in Section \ref{indexofrefraction}.
 
 An example of a structure that exhibits multiple zero-width band gaps is the 1-D PhC with equal optical thicknesses of both slabs ($d_1 n_1 = d_2 n_2$), but multiple such points exist when the dielectric permittivity or the dielectric filling fraction is changed, as depicted in Figs. \ref{fg_slab_eps_scan} and \ref{fg_slab_ff_scan}, respectively. These plots are also the simplest examples showing the interplay between the resonances contained in the dielectric structure and the overall band-gap structure, a topic that will be discussed later in more detail.
 
@@ -95,7 +95,7 @@ Note that with the correct branch retrieval procedure, the index of refraction n
                %\caption{3grey.pdf} \includegraphics[width=3cm]{img/multilay_3grey.pdf}
                %\caption{4vio.pdf}  \includegraphics[width=3cm]{img/multilay_4vio.pdf} \end{figure} 
 
-%}}}
+%}}
 \FloatBarrier %====================================================================================================
 %}}} /section
 \section{Wire medium} \label{chap_wiremedium}%{{{
@@ -336,7 +336,7 @@ In Ref. \cite{wallen2011anti}, it is argued that % against this interpretation w
 \textit{the periodicity cannot \ldots be the only explanation since qualitatively similar antiresonances have been reported using the measured data for a disordered high permittivity composite.}
 \end{displayquote}
 The true origin of antiresonances and other deviations of $\eeff(f)$ and $\meff(f)$ from the Lorentzian resonance curve can however be attributed to the presence of photonic band gaps and nonlocal response of the structure. These effects are, to some extent, maintained also under randomizing the unit cell positions \cite{peng2007},   
-and there is probably no need to seek for another explanation. %%TODO rewiew, rewrite?
+and there is probably no need to seek for another explanation. %%TODO review, rewrite?
 % \cite{alu2010} "Restoring the physical meaning of MM constitutive parameters"
 
 %An elaborate comparison of resonant metallic structures, with clear effect of adding the wire to the transmittance spectra, can be found e.g. in Ref. \cite{koschny2004effective}.
@@ -385,7 +385,7 @@ A similar way of operation is achieved by structures which extend infinitely in 
 
 The metallic \textit{cut-wire pair}\index{metamaterial!cut-wire pair}, or also \textit{strip pair}\index{metamaterial!strip pair}, metamaterial depicted in Fig. \ref{fg_SRRothers}f, was designed for operation in the infrared or optical range. It can be understood as a split-ring resonator flattened along the direction of the wave vector. The geometry is tuned so that the electric and magnetic resonances overlap.	
 
-At the radio freuqency range up to 100s MHz, each split-ring resonator can be connected to a small electric circuit which may provide gain \cite{jelinek2011fet} in the metamaterial. The effective parameter spectra of such an active metamaterial do not have to conform to the Kramers-Kronig relations anymore, since the spectrum of the medium response may acquire any sign of its imaginary part.
+At the radio frequency range up to 100s MHz, each split-ring resonator can be connected to a small electric circuit which may provide gain \cite{jelinek2011fet} in the metamaterial. The effective parameter spectra of such an active metamaterial do not have to conform to the Kramers-Kronig relations anymore, since the spectrum of the medium response may acquire any sign of its imaginary part.
 
 %}}}
 \paragraph{SRR in a wire array} %{{{
@@ -429,7 +429,7 @@ In all cases, the outer ring radius was $\rho = 30$ $\mu$m, conductor cross-sect
 \end{tabular}
 \end{figure}
 \begin{figure}[h] \caption[Dispersion curves for split-ring resonator with and without a wire mesh (comparison of the CDH and s-parameter results)]{Current-driven homogenisation results, shown as bubbles,  indicating the dispersion curves 
-	for \textbf{(a)} a symmetric split-ring resonator and \textbf{(b)} the same with a wire mesh. The area of each bubble corresponds to the relative amplitude of the respective harmonic component at the given frequency, as detected by the FDM algorithm; the blue shading on the background denotes the amplitude of the excited electric field as computed directly by Fourier transform.\\The results of the scattering-parameters method are overlayed as green lines; these show the same data as the green and blue solid lines from Fig. \ref{fg_SRR_principles}c. \\To save plotting spacee, in the right panel, the negative-index range of frequencies between 630 and 670~GHz was mirrored against the $K=0$ vertical axis and plotted by a dashed green line.} \label{fg_cdh5} \centering  % todo add params SRRArray_comment=symmetric SRR_simtime=2.000e-10_wirethick=0.000e+00_splitting2=1.600e-05_radius=3.000e-05_model=SRRArray.pdf
+	for \textbf{(a)} a symmetric split-ring resonator and \textbf{(b)} the same with a wire mesh. The area of each bubble corresponds to the relative amplitude of the respective harmonic component at the given frequency, as detected by the FDM algorithm; the blue shading on the background denotes the amplitude of the excited electric field as computed directly by Fourier transform.\\The results of the scattering-parameters method are overlaid as green lines; these show the same data as the green and blue solid lines from Fig. \ref{fg_SRR_principles}c. \\To save plotting space, in the right panel, the negative-index range of frequencies between 630 and 670~GHz was mirrored against the $K=0$ vertical axis and plotted by a dashed green line.} \label{fg_cdh5} \centering  % todo add params SRRArray_comment=symmetric SRR_simtime=2.000e-10_wirethick=0.000e+00_splitting2=1.600e-05_radius=3.000e-05_model=SRRArray.pdf
 	% TODO recalculate and update
 	\vspace{.1\textwidth}
 	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_sSRR.pdf}  
@@ -519,7 +519,7 @@ The effective parameters retrieved by the s-parameters method become easy to int
 \paragraph{Current-driven homogenisation and spatial dispersion}%{{{
 CDH results for the same structure parameters, $\rho_c\in\{6,8,10,18\}$ $\upmu$m are presented in Figs. \ref{fg_cdh1} and \ref{fg_cdh2}. For comparison, the dispersion curves corresponding to the $\Neff'(f)$ retrieved by the scattering parameters method are shown by green lines.
 
-For $\rho_c=6$ $\upmu$m, both retrieval methods yield relatively similar results, and they identify correctly two indirect band gaps, the first of which corresponds to the magnetic resonance, and the second to the antiparallel electric one. The match is not as good as in Fig. \ref{fg_cdh5}, though. Namely the magnetic resonance around 800~GHz appears somewhat wider when retrieved by the s-parameters method, compared to CDH. The deviation can be attributed to the structure being surrounded by vacuum instead of sensing the near fields of the surrounding cells (c.f. page \pageref{cdhadvantages}).
+For $\rho_c=6$ $\upmu$m, both retrieval methods yield relatively similar results, and they identify correctly two indirect band gaps, the first of which corresponds to the magnetic resonance, and the second to the antiparallel electric one. The match is not as good as in Fig. \ref{fg_cdh5}, though. Namely the magnetic resonance around 800~GHz appears somewhat wider when retrieved by the s-parameters method, compared to CDH. The deviation can be attributed to the structure being surrounded by vacuum instead of sensing the near fields of the surrounding cells (cf. page \pageref{cdhadvantages}).
 
 
 The value of $\rho_c=8$ $\upmu$m used for the right panel of Fig. \ref{fg_cdh1} was not chosen randomly, since for this inner capacitor radius, the spatial dispersion starts to affect substantially the dispersion curve of the second photonic band. It starts in the $\mathbf \Gamma$ point at 794~GHz with a positive group velocity and reaches its maximum of 890~GHz, but with growing $K$, the group velocity changes its sign and the band ends in the $\mathbf X$ point at ca. 887~GHz. At a given frequency between 887 and 890~GHz, two solutions of the wave equation exist that differ merely by the wavevector. The s-parameters method has no means of distinguishing them, and accordingly, the retrieved dispersion curve deviates from that retrieved by CDH.
@@ -676,7 +676,7 @@ When the ellipsoid axes have a general orientation with regard to their cubic la
 \end{figure}
 %}}}
 \paragraph{Experimental spectra of spheres} %{{{
-We measured series of spectra of titanium microsphere samples usingn the terahertz time-domain spectroscopy. We used the scheme described on pages \pageref{srtm}--\pageref{srtm2} to retrieve not only the transmittance of the single-layered sample, but also the reflectance, which enabled us to approximately compute the effective parameters of a metamaterial which would be made by arranging the spheres into a lattice. 
+We measured series of spectra of titanium microsphere samples using the terahertz time-domain spectroscopy. We used the scheme described on pages \pageref{srtm}--\pageref{srtm2} to retrieve not only the transmittance of the single-layered sample, but also the reflectance, which enabled us to approximately compute the effective parameters of a metamaterial which would be made by arranging the spheres into a lattice. 
 
 The first magnetic Mie resonance was easy to identify in the spectra. The exact quantitative comparison of the results was also possible, but of lesser physical meaning, since two most important quantities, the resonant frequency and the oscillator strength (i.e. amplitude of the resonant waveform) could not be characterised reliably. 
 
@@ -687,7 +687,7 @@ Second, the oscillator strength of the first Mie resonance does not allow for a 
 %}}}
 \paragraph{Comparison of experimental and simulated spectra}%{{{
 The effective permeability of two samples having different average sphere sizes is represented by dots in Fig. \ref{fg_mm2012_convolution}. The FDTD simulations for an array of identical TiO$_{2}$ spheres yielded much narrower resonant spectra of $\meff(f)$, which are represented by dashed red lines. 
-To enable a direct comparison, we used the granulometric data obtained by digital processing of the microscopic images. Using the granulometric data,, the effective radius of a sphere $\rho_{\text{eff}}$ was estimated for each particle from the minor $\rho_a$ and major axes $\rho_b$: 
+To enable a direct comparison, we used the granullometric data obtained by digital processing of the microscopic images. Using the granulometric data,, the effective radius of a sphere $\rho_{\text{eff}}$ was estimated for each particle from the minor $\rho_a$ and major axes $\rho_b$: 
 \begin{equation} \rho_{\text{eff}}^{(m)} := \left[\frac{2}{3\left(\rho_a^{(m)}\right)^2} + \frac{1}{3\left(\rho_b^{(m)}\right)^2}\right]^{-0.5} \label{eq_rhoconvol}\end{equation}
             %bin_particle_size = (1./3*bin_major**-2 + 1./3*bin_minor**-2 + 1./3*bin_minor**-2)**-.5 
 This expression is based on the assumption that the ellipsoids will orient horizontally when sprinkled on the microscope slide, thus making the shortest axis vertical and hidden from the statistical processing. Obviously, it is arbitrary to assume the shortest and medium ellipsoid axis will be both equal to $\rho_b$, but this approach yielded a relatively good match with experiment. 
@@ -722,7 +722,7 @@ With the aim to resolve this issue which affected all microsphere samples, we de
 Moderate narrowing of the resonance spectral shape can be observed for the correctly sized fraction, with the remaining fractions being shifted in the frequency as predicted. The intermediate fraction consistently exhibits more pronounced resonance in the permeability. %The results of the sieving, however, remain inconclusive.
 Simultaneously all spectra measured are burdened with one or more severe errors of the characterisation method. Namely in Fig. \ref{fg_sphere_sieving}, the simulations cannot explain the pronounced resonance in retrieved effective permittivity, which appears to be an artifact from the asymmetry of the sample between two sapphire plates. This may be also the cause of the spectra of $\eeff(f)$ and $\meff$ usually deviating from the expected values at higher frequencies.
 
-However, the truly fundamental limitation are the dissipative losses in TiO$_{2}$, already shown in Fig. \ref{fg_SphereWire_principles}.  They impose a tight upper bound for the figure of merit of any terahetrz metamaterial based on TiO$_{2}$ resonators. 
+However, the truly fundamental limitation are the dissipative losses in TiO$_{2}$, already shown in Fig. \ref{fg_SphereWire_principles}.  They impose a tight upper bound for the figure of merit of any terahertz metamaterial based on TiO$_{2}$ resonators. 
 
 %}}}
 \begin{figure}[h!] %{{{  fg_sphere_sieving
@@ -817,7 +817,7 @@ Fig. \ref{fg_erods_acomparison} compares the spectra of effective parameters for
 %\cite{yang2015}
 Starting with the blue curves in Fig. \ref{fg_erods_acomparison} representing a sparse array with $a=12\rho = 120$ $\upmu$m, one can identify two points of near-zero transmittance around 745 and 1170~GHz with two individual resonances. Each of them introduces a familiar shape in the spectrum of $\Neff(f)$. From the effective permittivity $\eeff(f)$ and permeability $\meff(f)$, the first resonance can be identified as an electric one, and the second as a magnetic one. The electric resonance has a strong dipole moment and introduces a broader band gap than any of the resonances shown in Fig. \ref{fg_rodsphere_comparison}. At frequencies close to the upper edge of the band gap, the dielectric structure behaves in a similar way to the wire array and plasma; this effect has been proposed to introduce negative permittivity in one all-dielectric metamaterial design \cite{jelinek2009artificial}.  %; the fundamental asymmetry arises from the fact that the spheres and rods are made of a dielectric that primarily interacts with the electric field, while its permeability $\murl=1$. 
 
-In spite of the strength of the first resonance, the corresponding region of $\eeff'(f)<0$ does not overlap with that of $\meff'(f)<0$ and no negative index of refraction is obtained  for the sparse rod array with $a=120$ $\upmu$m. The resulting spectra of all parameters are qualitatively similar to that of the electro-magnetic resonator with the capacitor radius $\rho_c\gtrsim 18$ $\upmu$m  (c.f. Figs. \ref{fg_emSRR_icr} and \ref{fg_cdh2}b).
+In spite of the strength of the first resonance, the corresponding region of $\eeff'(f)<0$ does not overlap with that of $\meff'(f)<0$ and no negative index of refraction is obtained  for the sparse rod array with $a=120$ $\upmu$m. The resulting spectra of all parameters are qualitatively similar to that of the electro-magnetic resonator with the capacitor radius $\rho_c\gtrsim 18$ $\upmu$m  (cf. Figs. \ref{fg_emSRR_icr} and \ref{fg_cdh2}b).
 
 %}}}
 \begin{figure}[h!]  %{{{ erods_acomparison
@@ -865,7 +865,7 @@ Through moderate reduction of the unit cell size $a$ to 90 $\upmu$m, as represen
 At the upper-frequency edge of the band with $\Neff'<0$, either the effective permeability or permittivity becomes positive, for $a\lesssim 92$ $\upmu$m or  $a\gtrsim 92$ $\upmu$m, respectively. This is another subtle, but qualitative change in the structure behaviour. 
 %It manifests itself in the mode shapes resolved by PWEM, and the effective impedance $\Zeff=\sqrt{\meff/\eeff}$ reaching either very low or very high values at the band edge. 
 
-At the exact parameter $a$ for the cross-over, the effective permittivity and permeability change their sign at the same frequency, and a \textit{zero-width band gap}\index{zero-width band gap} is obtained. Unlike the Fabry-Pérot resonances in 1-D PhC, this band gap is located at $\Neff'=0$, which results in a peculiar regime of operation -- in the idealized loss-less model, the wave would not exponentially decay nor would acquire any phase advance in the metamaterial volume; all unit cells would oscillate in phase. Still, its group velocity would be nonzero, and any spatial modulation of the wave envelope would propagate through the cells. This can be viewed as a complementary phenomenon to the extremely narrow photonic bands where, due to the vanishing inter-cell coupling, the phase velocity is orders of magnitude higher than the group velocity (c.f. the second band in Fig. \ref{fg_cdh2}b).
+At the exact parameter $a$ for the cross-over, the effective permittivity and permeability change their sign at the same frequency, and a \textit{zero-width band gap}\index{zero-width band gap} is obtained. Unlike the Fabry-Pérot resonances in 1-D PhC, this band gap is located at $\Neff'=0$, which results in a peculiar regime of operation -- in the idealized loss-less model, the wave would not exponentially decay nor would acquire any phase advance in the metamaterial volume; all unit cells would oscillate in phase. Still, its group velocity would be nonzero, and any spatial modulation of the wave envelope would propagate through the cells. This can be viewed as a complementary phenomenon to the extremely narrow photonic bands where, due to the vanishing inter-cell coupling, the phase velocity is orders of magnitude higher than the group velocity (cf. the second band in Fig. \ref{fg_cdh2}b).
 
 Both points of near-zero transmittance at $f_E$ and $f_M$, indicating individual resonances, come closer to each other with further reduction of $a$. The maximum amplitude of transmittance $|t|$ between both resonances decreases approximately with the second power of the frequency difference:
 \begin{equation} \underset{f \in\,\langle f_E,f_M\rangle}{\text{max}} |t| \propto \frac{1}{(f_E-f_M)^{2}}, \label{eq_fEfM}\end{equation}
@@ -1013,7 +1013,7 @@ The relevant papers (Refs. \cite{shi2007, peng2007, vynck2009all, rybin2014photo
 %}}}
 \paragraph{Implications for all-dielectric negative-index metamaterials} %{{{
 In Refs.  \cite{rybin2014photonic} and \cite{dominec2014transition}, the structure is regarded as a \textit{metamaterial} when the lowest band gap contains one or both Mie resonances. Otherwise, when the first band gap is of Bragg type, the structure should be classified among \textit{photonic crystals}. 
-The terminology difference has been discussed in the theoretical section, with the conclusion that one structure can be a representative of metamaterials and photonic crystals simulaneously, depending on the paradigm one prefers to use for its description. 
+The terminology difference has been discussed in the theoretical section, with the conclusion that one structure can be a representative of metamaterials and photonic crystals simultaneously, depending on the paradigm one prefers to use for its description. 
 
 This notation is rather formal, since it is based on the \textit{phase criterion} introduced on page \pageref{phasecriterion} and it does not affect the flow of energy. 
 The disappearance of resonances in the spectra is, however, an objective reality;  moreover, the fast resonant changes in $\Neff'$ are required for the spectra to conform to the Kramers-Kronig relations. 
@@ -1034,7 +1034,7 @@ The sufficiently high permittivity required for the \textit{metamaterial} regime
 \end{figure}
 %}}}
 \begin{figure}[t] % fg_slitarray%{{{
-	\caption{Side view of one unit cell of the slit array. \textbf{(a)} The geometry of the $x$-$z$ cross-section of a single unit cell, which was chosen to be centered to the slit between two metal stripes. The metal stripes extend infinitely along the $y$-axis.  \textbf{(b)} Sketch of the electric and magnetic fields of the first resonance, \textbf{(c)} second resonance for a thicker structure (c.f. upper right corner of Fig. \ref{fg_yslit_dscan}a)} \label{fg_slitarray} \centering 
+	\caption{Side view of one unit cell of the slit array. \textbf{(a)} The geometry of the $x$-$z$ cross-section of a single unit cell, which was chosen to be centered to the slit between two metal stripes. The metal stripes extend infinitely along the $y$-axis.  \textbf{(b)} Sketch of the electric and magnetic fields of the first resonance, \textbf{(c)} second resonance for a thicker structure (cf. upper right corner of Fig. \ref{fg_yslit_dscan}a)} \label{fg_slitarray} \centering 
 \begin{overpic}[height=0.25\textwidth]{img/drawing_slitarray.pdf}         \put (-12,83) {\textbf{(a)}}\end{overpic}\quad\quad
 \begin{overpic}[height=0.25\textwidth]{img/drawing_slitarray_resE1.pdf}   \put (-15,90) {\textbf{(b)}}\end{overpic}\quad\quad
 	\begin{overpic}[height=0.25\textwidth]{img/drawing_slitarray_resM1.pdf}   \put (-13,90) {\textbf{(c)}}
