hyphenation and figure flow

--- a/defs.tex
+++ b/defs.tex
@@ -58,7 +58,18 @@
 \hyphenation{si-mu-la-ti-on}
 \hyphenation{wa-ve-num-ber}
 \hyphenation{wa-ve-vec-tor}
+\hyphenation{fa-vour}
+\hyphenation{me-di-um}
+\hyphenation{di-men-si-o-nal}
+\hyphenation{di-men-si-o-nal-ly}
+\hyphenation{light-weight}
+\hyphenation{pre-sents}
+\hyphenation{im-pe-dan-ce}
+%\hyphenation{}
+%\hyphenation{}
+%\hyphenation{}
+%\hyphenation{}
 
-
+\emergencystretch=\maxdimen
 \clubpenalty=1000
 \widowpenalty=1000
